--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                         <td align="left">
                             <ul>
                                 <li>
+                                    <p style="font-family:Helvetica"><b>[Jan 18, 2023]:</b> <i> We are hiring 2023 summer interns to work on 3D related research projects! Feel free to drop me an email if you're interested.</i> <img src="./figures/new_animated.gif"> </p>
+                                </li>
+                                <li>
                                     <p style="font-family:Helvetica"><b>[Jul 03, 2022]:</b> <i> A paper is accepted to ECCV 2022.</i></p>
                                 </li>
                                 <li>
