--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily focus on the field of 3D Computer Vision and Graphics.
-                            In particular, I tackle the challenges in Neural Scene Reconstruction and Understanding, including structure from motion, SLAM, RGB-D fusion, depth estimation, semantic segmentation and view synthesis.
+                            In particular, I tackle the challenges in scene reconstruction and understanding, including neural surface reconstruction, SLAM, RGB-D fusion, depth estimation, semantic segmentation and view synthesis.
                         </p>
                     </td>
                 </tr>
@@ -81,7 +81,7 @@
                         <td align="left">
                             <ul>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Jan 18, 2023]:</b> <i> We are hiring 2023 summer interns to work on 3D related research projects! Feel free to drop me an email if you're interested.</i> <img src="./figures/new_animated.gif"> </p>
+                                    <p style="font-family:Helvetica"><b>[Jan 15, 2023]:</b> <i> We are hiring 2023 summer interns to work on 3D related research projects! Feel free to drop me an email if you're interested.</i> <img src="./figures/new_animated.gif"> </p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jul 03, 2022]:</b> <i> A paper is accepted to ECCV 2022.</i></p>
@@ -832,7 +832,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Sep 08, 2022 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jan 18, 2023 by Qingan Yan.</p>
             </div>
         </div>
     </div>
