--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <span style="font-family:Helvetica">
                                 <b>
                                     Research Scientist
-                                    <br>InnoPeak Technology
+                                    <br>InnoPeak Technology, Inc.
                                     <br>
                                 </b>
                             </span>
@@ -715,13 +715,14 @@
                     <tr>
                         <td align="left">
                             <p style="font-family:Helvetica"><b>Journal Reviewer:</b>
-                                <a href="https://mc.manuscriptcentral.com/tpami-cs">IEEE TPAMI</a>,
+                                <a href="https://mc.manuscriptcentral.com/tpami-cs">TPAMI</a>,
                                 <a href="https://mc.manuscriptcentral.com/tip-ieee">TIP</a>,
                                 <a href="https://mc.manuscriptcentral.com/tmm-ieee">TMM</a>,
                                 <a href="https://mc.manuscriptcentral.com/tcsvt">TCSVT</a>,
                                 <a href="https://mc.manuscriptcentral.com/cyb-ieee">TCYB</a>,
                                 <a href="https://ees.elsevier.com/neucom/default.asp">Neurocomputing</a>,
                                 <a href="https://www.editorialmanager.com/pr/default1.aspx">PR</a>
+                                <a href="https://www.editorialmanager.com/tvcj/default2.aspx">TVC</a>
                             </p>
                             <!--<ul>
                                 <li>
