--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                                 <a href="https://mc.manuscriptcentral.com/tcsvt">TCSVT</a>,
                                 <a href="https://mc.manuscriptcentral.com/cyb-ieee">TCYB</a>,
                                 <a href="https://ees.elsevier.com/neucom/default.asp">Neurocomputing</a>,
-                                <a href="https://www.editorialmanager.com/pr/default1.aspx">PR</a>
+                                <a href="https://www.editorialmanager.com/pr/default1.aspx">PR</a>,
                                 <a href="https://www.editorialmanager.com/tvcj/default2.aspx">TVC</a>
                             </p>
                             <!--<ul>
