--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                                     <i>European Conference on Computer Vision <b>(ECCV)</b>, 2022.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="https://arxiv.org/abs/2205.01656"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136610354.pdf"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136610354-supp.pdf"><u>Supplemental Material</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -218,7 +219,7 @@
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2022.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="https://arxiv.org/abs/2203.12082"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Liu_PlaneMVS_3D_Plane_Reconstruction_From_Multi-View_Stereo_CVPR_2022_paper.pdf"><u>Paper</u></a>]&nbsp;
                                 </p>
                             </li>
                         </ul>
@@ -310,7 +311,7 @@
                                     <i>European Conference on Computer Vision <b>(ECCV)</b>, 2020.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="https://arxiv.org/abs/2007.02374"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123700511.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="https://github.com/XLechter/Detail-Preserved-Point-Cloud-Completion-via-SFA"><u>Code</u></a>]&nbsp;
                                 </p>
                             </li>
@@ -833,7 +834,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jan 18, 2023 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Feb 14, 2023 by Qingan Yan.</p>
             </div>
         </div>
     </div>
