--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily focus on the field of 3D Computer Vision and Graphics.
-                            In particular, I tackle the challenges in scene reconstruction and understanding, including neural surface reconstruction, SLAM, RGB-D fusion, depth estimation, semantic segmentation and view synthesis.
+                            In particular, I tackle the challenges in 3D scene reconstruction and understanding, including neural surface reconstruction, SLAM, RGB-D fusion, depth estimation, semantic labeling and free-viewpoint rendering.
                         </p>
                     </td>
                 </tr>
@@ -80,6 +80,9 @@
                     <tr>
                         <td align="left">
                             <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Feb 27, 2023]:</b> <i> A paper is accepted to CVPR 2023.</i></p>
+                                </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jan 15, 2023]:</b> <i> We are hiring 2023 summer interns to work on 3D related research projects! Feel free to drop me an email if you're interested.</i> <img src="./figures/new_animated.gif"> </p>
                                 </li>
@@ -140,7 +143,37 @@
             <tbody>
                 <tr>
                     <td width="21%<article>">
-                        <img src="./figures/eccv22_georefine.jpg" width="100%<article>">
+                        <img src="./figures/cvpr23_riav.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        RIAV-MVS: Recurrent-Indexing an Asymmetric Volume for Multi-View Stereo
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Changjiang Cai, Pan Ji, <b>Qingan Yan</b>, Yi Xu
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2023.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://arxiv.org/abs/2205.14320"><u>Paper</u></a>]&nbsp;
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/eccv22_georefine1.jpg" width="100%<article>">
                     </td>
                     <td align="left">
                         <ul>
@@ -834,7 +867,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Feb 14, 2023 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Feb 27, 2023 by Qingan Yan.</p>
             </div>
         </div>
     </div>
