--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <b>Office:</b> 2479 E Bayshore Rd #110, Palo Alto, CA 94303<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
                                 <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a> |
-                                <a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">GoogleScholar</a>
+                                <a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Google Scholar</a>
                                 <br>
                             </span>
                         </p>
@@ -84,7 +84,7 @@
                                     <p style="font-family:Helvetica"><b>[Feb 27, 2023]:</b> <i> A paper is accepted to CVPR 2023.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Jan 15, 2023]:</b> <i> We are hiring 2023 summer interns to work on 3D related research projects! Feel free to drop me an email if you're interested.</i> <img src="./figures/new_animated.gif"> </p>
+                                    <p style="font-family:Helvetica"><b>[Jan 15, 2023]:</b> <i> (Done) <s> We are hiring 2023 summer interns to work on 3D related research projects! Feel free to drop me an email if you're interested.</s></i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jul 03, 2022]:</b> <i> A paper is accepted to ECCV 2022.</i></p>
@@ -96,12 +96,11 @@
                                     <p style="font-family:Helvetica"><b>[Feb 01, 2021]:</b> <i> Start a new journey at InnoPeak Technology.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Jul 02, 2020]:</b> <i> One papers is accepted to ECCV 2020.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Jul 02, 2020]:</b> <i> One paper is accepted to ECCV 2020.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020, 
-                                        and the <a href="https://github.com/fdp0525/JointTG" rel="nofollow"><u>implementation</u></a> is also available.
-                                            Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> One paper is accepted to CVPR 2020 and the <a href="https://github.com/fdp0525/JointTG" rel="nofollow"><u>implementation</u></a> is available.
+                                        Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jul 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
@@ -109,8 +108,7 @@
                                 <li>
                                     <p style="font-family:Helvetica">
                                         <b>[Apr 01, 2018]:</b> <i>
-                                            Our paper on RGBD texture mapping is accepted to CVPR 2018,
-                                            and the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>implementation</u></a> is also available.
+                                            Our paper is accepted to CVPR 2018 and the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>implementation</u></a> is available.
                                             Due to the agreement with other company, some parts can only be released in the form of .so files.
                                         </i>
                                     </p>
@@ -447,7 +445,7 @@
             </tbody>
         </table>
 
-        <table class="imgtable">
+        <!--<table class="imgtable">
             <tbody>
                 <tr>
                     <td width="21%<article>">
@@ -475,7 +473,7 @@
                     </td>
                 </tr>
             </tbody>
-        </table>
+        </table>-->
 
         <table class="imgtable">
             <tbody>
@@ -867,7 +865,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Feb 27, 2023 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Mar 21, 2023 by Qingan Yan.</p>
             </div>
         </div>
     </div>
