--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of 3D Computer Vision and Graphics.
-                            In particular, I tackle the challenges in 3D scene reconstruction and understanding, including neural surface reconstruction, SLAM, RGB-D fusion, depth estimation, semantic labeling and free-viewpoint rendering.
+                            My interests primarily lie in the field of 3D Computer Vision and Graphics.
+                            In particular, I tackle the challenges in <i>neural scene reconstruction &amp generation &amp editing, SLAM, depth estimation, semantic labeling and free-viewpoint navigation</i>.
                         </p>
                     </td>
                 </tr>
@@ -865,7 +865,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Mar 21, 2023 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Apr 26, 2023 by Qingan Yan.</p>
             </div>
         </div>
     </div>
