--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <span style="font-family:Helvetica">
                                 <b>
                                     Research Scientist
-                                    <br>InnoPeak Technology, Inc.
+                                    <br>InnoPeak Technology, Inc (OPPO US Research Center).
                                     <br>
                                 </b>
                             </span>
@@ -159,6 +159,7 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="https://arxiv.org/abs/2205.14320"><u>Paper</u></a>]&nbsp;
+                                    [<a href="http://www.changjiangcai.com/riav-mvs.github.io/"><u>Project Page</u></a>]
                                 </p>
                             </li>
                         </ul>
