--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
                 <tr>
                     <td>
                         <p style="font-family:Helvetica">
-                            I am a staff research scientist at <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center), focusing on XR related projects. 
+                            I am a staff research scientist at <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">XR team</a> of <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center),
+                            leading a team focusing on 3D environment understanding and 4D videography. 
                             From 2017 to 2021, I served as a senior research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Graphics.
-                            In particular, I tackle the challenges in <i>neural scene reconstruction &amp generation &amp editing, SLAM, depth estimation, semantic labeling and free-viewpoint navigation</i>.
+                            In particular, I tackle the challenges in neural <i>scene reconstruction &amp generation &amp editing, SLAM, depth estimation, semantic labeling and free-viewpoint navigation</i>.
                         </p>
                     </td>
                 </tr>
@@ -80,6 +81,9 @@
                     <tr>
                         <td align="left">
                             <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Dec 15, 2023]:</b> <i> We are hiring 2024 summer interns to work on 3D computer vision related research topics! Feel free to drop me an email if you're interested.</i></p>
+                                </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 27, 2023]:</b> <i> A paper is accepted to CVPR 2023.</i></p>
                                 </li>
