--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                         <td align="left">
                             <ul>
                                 <li>
+                                    <p style="font-family:Helvetica"><b>[Feb 26, 2024]:</b> <i> A paper is accepted to CVPR 2024.</i></p>
+                                </li>
+                                <li>
                                     <p style="font-family:Helvetica"><b>[Dec 15, 2023]:</b> <i> We are hiring <a href="https://apply.workable.com/innopeaktech/j/BC7EE44D37/">2024 summer interns</a> to work on 3D computer vision related research topics! Feel free to drop me an email if you're interested.</i></p>
                                 </li>
                                 <li>
@@ -140,6 +143,37 @@
         </div>
 
         <h1 style="font-size:24px">Selected Publications (<a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Full List</a>)</h1>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        NARUTO: Neural Active Reconstruction from Uncertain Target
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Ziyue Feng<sup>*</sup>, Huangying Zhan<sup>*</sup>, Zheng Chen, <b>Qingan Yan</b>, Xiangyu Xu, Changjiang Cai, Bing Li, Qilun Zhu, Yi Xu
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2024.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<u>Paper (coming soon)</u>]&nbsp;
+                                    [<u>Code (coming soon)</u>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable">
             <tbody>
