--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
             <tbody>
                 <tr>
                     <td width="21%<article>">
-                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                        <img src="./figures/cvpr24_naruto.jpg" width="100%<article>">
                     </td>
                     <td align="left">
                         <ul>
                             <li>
                                 <h3 style="font-family:Helvetica">
                                     <b>
-                                        NARUTO: Neural Active Reconstruction from Uncertain Target
+                                        NARUTO: Neural Active Reconstruction from Uncertain Target Observations
                                     </b>
                                 </h3>
                                 <p style="font-family:Helvetica">
@@ -165,7 +165,7 @@
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2024.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<u>Paper (coming soon)</u>]&nbsp;
+                                    [<a href="https://arxiv.org/abs/2402.18771"><u>Paper (arXiv)</u></a>]&nbsp;
                                     [<u>Code (coming soon)</u>]
                                 </p>
                             </li>
@@ -904,7 +904,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Dec 28, 2023 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Mar 02, 2024 by Qingan Yan.</p>
             </div>
         </div>
     </div>
