--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     <td>
                         <p style="font-family:Helvetica">
                             I am a staff research scientist at <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">XR department</a> of <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center),
-                            leading a team focusing on 3D scene perception and 4D stereoscopic videography. 
+                            leading a team focusing on AI-empowered 3D environment perception and LMMs-driven user interaction. 
                             From 2017 to 2021, I served as a senior research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
-                            My interests primarily lie in the field of 3D Computer Vision and Graphics.
-                            In particular, I tackle the challenges in <i>neural scene reconstruction &amp generation &amp editing, SLAM, panoptic segmentation, depth estimation and free-viewpoint navigation</i>.
+                            My interests primarily lie in the field of 3D Computer Vision and AIGC.
+                            In particular, I tackle the challenges in <i>neural scene reconstruction &amp generation &amp editing, SLAM, panoptic segmentation, depth estimation, novel view synthesis and efficient large multimodal models</i>.
                         </p>
                     </td>
                 </tr>
@@ -85,7 +85,7 @@
                                     <p style="font-family:Helvetica"><b>[Feb 26, 2024]:</b> <i> A paper is accepted to CVPR 2024.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Dec 15, 2023]:</b> <i> We are hiring <a href="https://apply.workable.com/innopeaktech/j/BC7EE44D37/">2024 summer interns</a> to work on 3D computer vision related research topics! Feel free to drop me an email if you're interested.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Dec 15, 2023]:</b> <i> We are hiring <a href="https://apply.workable.com/innopeaktech/j/BC7EE44D37/">2024 summer interns</a> to work on 3D computer vision & AIGC related research topics! Feel free to drop me an email if you're interested.</i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 27, 2023]:</b> <i> A paper is accepted to CVPR 2023.</i></p>
@@ -166,7 +166,7 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="https://arxiv.org/abs/2402.18771"><u>Paper (arXiv)</u></a>]&nbsp;
-                                    [<u>Code (coming soon)</u>]
+                                    [<a href="https://oppo-us-research.github.io/NARUTO-website/"><u>Project Page</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -904,7 +904,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Mar 02, 2024 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Apr 10, 2024 by Qingan Yan.</p>
             </div>
         </div>
     </div>
