--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     <p style="font-family:Helvetica"><b>[Feb 26, 2024]:</b> <i> A paper is accepted to CVPR 2024.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Dec 15, 2023]:</b> <i> We are hiring <a href="https://apply.workable.com/innopeaktech/j/BC7EE44D37/">2024 summer interns</a> to work on 3D computer vision & AIGC related research topics! Feel free to drop me an email if you're interested.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Dec 15, 2023]:</b> <i> (Done) <s> We are hiring <a href="https://apply.workable.com/innopeaktech/j/BC7EE44D37/">2024 summer interns</a> to work on 3D computer vision & AIGC related research topics! Feel free to drop me an email if you're interested.</s></i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 27, 2023]:</b> <i> A paper is accepted to CVPR 2023.</i></p>
