--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>
-                                    Research Scientist
+                                    Research Scientist (3D Computer Vision | Interactive AI)
                                     <br>InnoPeak Technology, Inc (OPPO US Research Center).
                                     <br>
                                 </b>
@@ -60,12 +60,12 @@
                     <td>
                         <p style="font-family:Helvetica">
                             I am a staff research scientist at <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">XR department</a> of <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center),
-                            leading a team focusing on AI-empowered 3D environment perception and LMMs-driven user interaction. 
+                            leading a team focusing on 3D environment perception and AI-powered user-device interaction. 
                             From 2017 to 2021, I served as a senior research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
-                            My interests primarily lie in the field of 3D Computer Vision and AIGC.
+                            My interests primarily lie in the field of 3D Computer Vision and Interactive AI.
                             In particular, I tackle the challenges in <i>neural scene reconstruction &amp generation &amp editing, SLAM, panoptic segmentation, depth estimation, novel view synthesis and efficient large multimodal models</i>.
                         </p>
                     </td>
