--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
-                            My interests primarily lie in the field of 3D Computer Vision and Interactive AI.
+                            My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
                             In particular, I tackle the challenges in <i>neural scene reconstruction &amp generation &amp editing, SLAM, panoptic segmentation, depth estimation, novel view synthesis and efficient large multimodal models</i>.
                         </p>
                     </td>
