--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>
-                                    Research Scientist (3D Computer Vision | Interactive AI)
+                                    Research Scientist (3D Computer Vision | Embodied AI)
                                     <br>InnoPeak Technology, Inc (OPPO US Research Center).
                                     <br>
                                 </b>
@@ -66,7 +66,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
-                            In particular, I tackle the challenges in <i>neural scene reconstruction &amp generation &amp editing, SLAM, panoptic segmentation, depth estimation, novel view synthesis and efficient large multimodal models</i>.
+                            In particular, I tackle the challenges in <i>neural scene reconstruction, SLAM, panoptic segmentation, depth estimation, novel view synthesis, diffusion model and efficient multimodal agents</i>.
                         </p>
                     </td>
                 </tr>
@@ -904,7 +904,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Apr 10, 2024 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Apr 15, 2024 by Qingan Yan.</p>
             </div>
         </div>
     </div>
