--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="https://arxiv.org/abs/2402.18771"><u>Paper (arXiv)</u></a>]&nbsp;
-                                    [<a href="https://oppo-us-research.github.io/NARUTO-website/"><u>Project Page</u></a>]
+                                    [<a href="https://oppo-us-research.github.io/NARUTO-website/"><u>Project Page</u></a>]&nbsp;
+                                    [<a href="https://github.com/oppo-us-research/NARUTO"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -904,7 +905,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Apr 15, 2024 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Apr 16, 2024 by Qingan Yan.</p>
             </div>
         </div>
     </div>
