--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>
-                                    Research Scientist (3D Computer Vision | Embodied AI)
+                                    Research Scientist
                                     <br>InnoPeak Technology, Inc (OPPO US Research Center).
                                     <br>
                                 </b>
@@ -66,7 +66,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
-                            In particular, I tackle the challenges in <i>neural scene reconstruction, SLAM, panoptic segmentation, depth estimation, novel view synthesis, generative diffusion model and large multimodal model</i>.
+                            In particular, I tackle the challenges in <i>neural scene reconstruction, SLAM, panoptic segmentation, depth estimation, vision-language navigation, generative diffusion model and large multimodal model</i>.
                         </p>
                     </td>
                 </tr>
