--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <p style="font-family:Helvetica"><b>[Mar 01, 2022]:</b> <i> A paper is accepted to CVPR 2022.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Feb 01, 2021]:</b> <i> Start a new journey at InnoPeak Technology.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Feb 01, 2021]:</b> <i> Start a new journey at OPPO US Research Center (InnoPeak Technology).</i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jul 02, 2020]:</b> <i> One paper is accepted to ECCV 2020.</i></p>
