--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
-                            In particular, I tackle the challenges in <i>neural scene reconstruction, generative 3D modeling, SLAM, panoptic segmentation, depth estimation;
-                            scene graph representing, vision-language navigation and large multimodal models</i>.
+                            In particular, I tackle the challenges in <i>neural scene reconstruction, generative 3D modeling, SLAM, panoptic segmentation, depth estimation and large multimodal models</i>.
                         </p>
                     </td>
                 </tr>
