--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                 <tr>
                     <td>
                         <p style="font-family:Helvetica">
-                            I am a staff research scientist at <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">XR department</a> of <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center),
-                            leading a team focusing on 3D environment perception and LLM-powered user-device interaction. 
-                            From 2017 to 2021, I served as a senior research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
+                            I am a staff research scientist & tech lead at the <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">AI-wearable devices department</a> of <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center),
+                            leading a team focusing on 3D environment perception and LLM-powered user-device interaction algorithms design. 
+                            From 2017 to 2021, I served as a senior research scientist for 3D Vision-related algorithm development at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
-                            In particular, I tackle the challenges in <i>neural scene reconstruction, generative 3D modeling, SLAM, panoptic segmentation, depth estimation and large multimodal models</i>.
+                            In particular, I tackle the challenges in <i>scene reconstruction, content generation, layout understanding, panoptic segmentation, SLAM, depth estimation and foundation models</i>.
                         </p>
                     </td>
                 </tr>
@@ -888,7 +888,14 @@
             <tbody>
                 <tr>
                     <td align="left">
-                        <p style="font-family:Helvetica"><b>3D Vision</b></p>
+                        <p style="font-family:Helvetica"><b>Blogs</b></p>
+                        <ul>
+                            <li>
+                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Research_Summary">Research Recorder</a> <br><i>A memory palace for myself. Constructing... subject to... time and mood...</i></p>
+                            </li>
+                        </ul>
+                        
+                        <p style="font-family:Helvetica"><b>Tools</b></p>
                         <ul>
                             <li>
                                 <p style="font-family:Helvetica"><a href="https://github.com/OneEyedEagle/EAGLE-TextureMapping">Texture Mapping</a> (C++) <br><i>Our trial implementation of the paper, "Patch-Based Optimization for Image-Based Texture Mapping" SIGGRAPH 2017.</i></p>
@@ -907,7 +914,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jun 5, 2024 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Oct 25, 2024 by Qingan Yan.</p>
             </div>
         </div>
     </div>
