--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                         <p style="font-family:Helvetica"><b>Blogs</b></p>
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Research_Summary">Research Recorder</a> <br><i>A memory palace for myself. Constructing... subject to... time and mood...</i></p>
+                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Research_Summary">Research Recorder</a> <br><i>A research-related memory palace for myself (constructing... subject to... time and mood...).</i></p>
                             </li>
                         </ul>
                         
