--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>
-                                    Research Scientist
+                                    Research Scientist 
                                     <br>InnoPeak Technology, Inc (OPPO US Research Center).
                                     <br>
                                 </b>
@@ -66,7 +66,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
-                            In particular, I tackle the challenges in <i>scene reconstruction, content generation, layout understanding, panoptic segmentation, SLAM, depth estimation and foundation models</i>.
+                            In particular, I tackle the challenges in <i>scene reconstruction, content generation, layout understanding, panoptic segmentation, SLAM, depth estimation and multimodal foundation models</i>.
                         </p>
                     </td>
                 </tr>
