--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                                 <p style="padding-top:10px">
                                     [<a href="https://arxiv.org/abs/2205.14320"><u>Paper</u></a>]&nbsp;
                                     [<a href="http://www.changjiangcai.com/riav-mvs.github.io/"><u>Project Page</u></a>]
+                                    [<a href="https://github.com/oppo-us-research/riav-mvs"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -914,7 +915,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Oct 25, 2024 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Nov 15, 2024 by Qingan Yan.</p>
             </div>
         </div>
     </div>
