--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                 <tr>
                     <td>
                         <p style="font-family:Helvetica">
-                            I am a staff research scientist & tech lead at the <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">AI-wearable devices department</a> of <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center),
-                            leading a team focusing on 3D environment perception and LLM-powered user-device interaction algorithms design. 
-                            From 2017 to 2021, I served as a senior research scientist for 3D Vision-related algorithm development at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
-                            Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
+                            I am currently a Tech Lead Manager at <a href="https://www.goertek.com/en/">Goertek</a> Alpha Labs in Santa Clara, CA, where I direct the research and design of cutting-edge visual perception AI algorithms.
+                            Prior to this, I served as a Staff Research Scientist and Tech Lead in the <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">AI-Wearable Devices Department</a> at <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center) in Palo Alto, CA, 
+                            where I led a team focused on developing 3D environment perception and large language model (LLM)-powered user-device interaction algorithms.
+                            From 2017 to 2021, I worked as a Senior Research Scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA, specializing in 3D vision algorithm development.
+                            I received my Ph.D. in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a> in 2017.
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
@@ -81,6 +82,15 @@
                     <tr>
                         <td align="left">
                             <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Feb 26, 2025]:</b> <i> A paper is accepted to CVPR 2025.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Jan 27, 2025]:</b> <i> A paper is accepted to ICRA 2025.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Dec 09, 2024]:</b> <i> Start a new journey at Goertek.</i></p>
+                                </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 26, 2024]:</b> <i> A paper is accepted to CVPR 2024.</i></p>
                                 </li>
@@ -915,7 +925,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Nov 15, 2024 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jun 03, 2025 by Qingan Yan.</p>
             </div>
         </div>
     </div>
