--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>
-                                    Research Scientist 
-                                    <br>InnoPeak Technology, Inc (OPPO US Research Center).
+                                    Tech Lead Manager 
+                                    <br>Goertek Alpha Labs
                                     <br>
                                 </b>
                             </span>
@@ -36,7 +36,7 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>Email:</b> yanqinganssg <i>at</i> gmail <i>dot</i> com<br>
-                                <b>Office:</b> 2479 E Bayshore Rd #110, Palo Alto, CA 94303<br>
+                                <b>Office:</b> 5451 Great America Pkwy #301, Santa Clara, CA 95054<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
                                 <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a> |
                                 <a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Google Scholar</a>
